:bento: add pdf test page
Co-authored-by: Max Klingelhoeffer <klingelhoeffer@sipgate.de>

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ FAXLINE_ID=
 
 # Choose a fax number of the recipient.
 RECIPIENT=
+
+# Choose the path of the pdf file to send.
+PDF_FILE_PATH=./testpage.pdf
